Bugfix: Fontsize on iOS devices was incorrect in horizontal mode

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
+
+    text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 }
 
 html,
